3.24进度，初步完成日志记录，discord鉴权待办 1